Fix path to account menu chevron image after namespacing components

--- a/src/components/hmrc-account-menu/_account-menu.scss
+++ b/src/components/hmrc-account-menu/_account-menu.scss
@@ -7,7 +7,7 @@
 }
 
 // dirty, dirty, dirty
-// Necessary as there's a specicifity problem on the <li>'s in the mobile menu 
+// Necessary as there's a specicifity problem on the <li>'s in the mobile menu
 .hidden,
 .no-js .js-visible,
 .js .js-hidden {
@@ -32,7 +32,7 @@ $hmrc-transition-type: "all";
 
 
   @include govuk-if-ie8 {
-    background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-home.png");
+    background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-home.png");
   }
 }
 
@@ -225,13 +225,13 @@ $hmrc-transition-type: "all";
   .hmrc-account-menu__link--back {
     padding-left: 20px;
     border-bottom: 1px solid govuk-colour("grey-3");
-    background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-chevron-left.svg");
+    background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-chevron-left.svg");
     background-repeat: no-repeat;
     background-position: 10px;
     background-size: 12px;
 
     @include govuk-if-ie8 {
-      background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-chevron-left.png");
+      background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-chevron-left.png");
     }
 
     .hmrc-account-menu__link {
@@ -253,7 +253,7 @@ $hmrc-transition-type: "all";
   top: -61px;
   left: 0;
   width: 100%;
-  //transition: margin .3s ease-in-out;  
+  //transition: margin .3s ease-in-out;
   border-bottom: 1px solid govuk-colour("grey-2");
   outline: none;
   background-color: govuk-colour("grey-4");
@@ -364,25 +364,25 @@ hmrc-subnav__section__heading {
 
 .js-enabled .hmrc-account-menu__link--menu,
 .js-enabled .is-smaller .hmrc-account-menu__link--more {
-  background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-chevron-right.svg");
+  background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-chevron-right.svg");
   background-repeat: no-repeat;
   background-position: right 4px center;
   background-size: 12px;
 
   @include govuk-if-ie8 {
-    background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-chevron-right.png");
+    background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-chevron-right.png");
   }
 }
 
 .js-enabled .hmrc-account-home--account--is-open,
 .js-enabled .is-smaller .hmrc-account-menu__link--more-expanded,
 .js-enabled .hmrc-account-menu__link--more {
-  background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-chevron-down.svg");
+  background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-chevron-down.svg");
   background-position: right 4px center;
   background-size: 12px;
 
   @include govuk-if-ie8 {
-    background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-chevron-down.png");
+    background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-chevron-down.png");
   }
 }
 
@@ -391,12 +391,12 @@ hmrc-subnav__section__heading {
   padding-right: 31px;
   border-bottom: 0;
   outline: none;
-  background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-chevron-down.svg");
+  background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-chevron-down.svg");
   background-position: right 14px center;
   background-size: 12px;
 
   @include govuk-if-ie8 {
-    background-image: url("#{$hmrc-assets-path}components/account-menu/images/icon-chevron-down.png");
+    background-image: url("#{$hmrc-assets-path}components/hmrc-account-menu/images/icon-chevron-down.png");
   }
 
   &:before,
